# channels

./: CMakeLists.txt  README.md  conanfile.txt
src/lib/: channel.h
src/test/: channel_test.cpp
